deploy/local-cluster/templates/pdfdiff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdfdiff  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pdfdiff
  template:
    metadata:
      labels:
        app: pdfdiff
    spec:
      containers:
      - name: pdfdiff
        #image: docker.pkg.github.com/jppgroup/pdfdiff/pdfdiff:0.1
        image: jppuk/pdfdiff:0.1.1
        ports:
        - containerPort: 80
      #imagePullSecrets:
      #- name: githubcred
---
apiVersion: v1
kind: Service
metadata:
  name: pdfdiff
spec:
  selector:
    app: pdfdiff
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
